@@ -1,3 +1,7 @@
+Fri Sep 26 12:53:37 2008  Koichi Sasada  <ko1@atdot.net>
+
+	* ricsin/ricsin.rb: fix to use require_relative.
+
 Fri Sep 26 12:49:52 2008  Koichi Sasada  <ko1@atdot.net>
 
 	* ricsin/ricsin.rb: fix $0 and fix to output ricsin_#{name}.rb.
